--- a/gridftp/docker-compose.yml
+++ b/gridftp/docker-compose.yml
@@ -2,16 +2,17 @@ version: "2"
 
 services:
     gridftp-server:
-        image: gitlab-registry.cern.ch/fts/ready-to-go/gridftp:latest
+        build:
+          context: .
         network_mode: "host"
         ports:
             - "0.0.0.0:80:80"
             - "0.0.0.0:2811:2811"
             - "0.0.0.0:50000-50200:50000-50200"
         environment:
-            - TESTCERT=--test-cert
-            - EMAIL=example@example.com
-            - DOMAIN=
+            - TESTCERT=$TESTCERT
+            - EMAIL=$EMAIL
+            - DOMAIN=$DOMAIN
         volumes:
             - /etc/passwd:/etc/passwd
             - /etc/group:/etc/group
