--- a/gridftp/docker-compose.yml
+++ b/gridftp/docker-compose.yml
@@ -10,9 +10,9 @@ services:
             - "0.0.0.0:2811:2811"
             - "0.0.0.0:50000-50200:50000-50200"
         environment:
-            - TESTCERT=$TESTCERT
-            - EMAIL=$EMAIL
-            - DOMAIN=$DOMAIN
+            - TESTCERT
+            - EMAIL
+            - DOMAIN
         volumes:
             - /etc/passwd:/etc/passwd
             - /etc/group:/etc/group
