--- a/gridftp/docker-compose.yml
+++ b/gridftp/docker-compose.yml
@@ -7,6 +7,7 @@ services:
           args:
             - LOCALGRIDMAP
             - CONTAINERUSERS
+            - DOMAIN
         network_mode: "host"
         ports:
             - "0.0.0.0:80:80"
