--- a/gridftp/image/supervisord.ini
+++ b/gridftp/image/supervisord.ini
@@ -26,6 +26,8 @@ startsecs=0
 command=/usr/sbin/globus-gridftp-server
     -c /etc/gridftp.conf
     -pidfile /var/run/globus-gridftp-server.pid
+    -d all
+    -l /var/log/gridftp.log
     -no-detach
     -config-base-path /
 priority=50
