Change VOMS server, and set as disabled for now.

--- a/gridftp/config/edg-mkgridmap.conf
+++ b/gridftp/config/edg-mkgridmap.conf
@@ -1,3 +1,3 @@
-group "vomss://voms.hellasgrid.gr:8443/voms/dteam" nobody
+# group "vomss://voms1.grid.cesnet.cz:8443/voms/vo.elixir-europe.org/" nobody
 gmf_local /etc/localgridmap.conf
 
