--- a/gridftp/Dockerfile
+++ b/gridftp/Dockerfile
@@ -37,7 +37,7 @@ ARG CONTAINERUSERS
 RUN for u in $CONTAINERUSERS; do if [ $u ]; then adduser -m -c '' $u; fi; done
 
 # Let's Encrypt
-RUN if [[ -z ${EMAIL} ]]; then echo "Warning: EMAIL not set - required for obtaining a letsencrypt certificate"; done
+RUN if [[ -z ${EMAIL} ]]; then echo "Warning: EMAIL not set - required for obtaining a letsencrypt certificate"; fi
 RUN yum install -y certbot
 ADD "image/certbot.cron" "/etc/cron.d/"
 ADD "image/letsencrypt.sh" "/usr/local/bin"
