Make EMAIL visible to Dockerfile via ARG.

--- a/gridftp/docker-compose.yml
+++ b/gridftp/docker-compose.yml
@@ -8,6 +8,7 @@ services:
             - LOCALGRIDMAP
             - CONTAINERUSERS
             - DOMAIN
+            - EMAIL
         network_mode: "host"
         ports:
             - "0.0.0.0:80:80"
